k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: sre-microservices
  labels:
    project: sre-platform
    environment: production
